--- a/index.html
+++ b/index.html
@@ -94,4 +94,53 @@
             transition: transform 0.3s ease-in-out;
         }
         
-        /* [修改] 鍵盤收合後的樣
+        /* [修改] 鍵盤收合後的樣式 */
+        .keyboard-panel.is-collapsed {
+            height: 30px !important; /* 收合到一個小高度，作為把手 */
+            padding: 0;
+            overflow: visible; /* 允許絕對定位的按鈕可見 */
+        }
+        .keyboard-panel.is-collapsed .panel-toggle {
+           top: 5px; /* 重新定位按鈕到把手中央 */
+        }
+        .keyboard-panel.is-collapsed .panel-toggle svg {
+            transform: rotate(180deg);
+        }
+        /* 當收合時，隱藏鍵盤和輸入框 */
+        .keyboard-panel.is-collapsed .input-display,
+        .keyboard-panel.is-collapsed .virtual-keyboard {
+            visibility: hidden;
+        }
+    </style>
+</head>
+<body>
+    <div id="app" class="app-container">
+        <div class="results-panel">
+            <h3>Quick Quote Results</h3>
+            <table class="results-table">
+                <thead>
+                    <tr><th>W</th><th>H</th><th>TYPE</th><th>Price</th></tr>
+                </thead>
+                <tbody>
+                    <tr><td colspan="4" style="color: #888;">Please enter dimensions to begin...</td></tr>
+                </tbody>
+            </table>
+        </div>
+        <div class="keyboard-panel" id="keyboard-panel">
+            <div class="panel-toggle" id="panel-toggle" title="Toggle Keyboard">
+                <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" d="m19.5 8.25-7.5 7.5-7.5-7.5" /></svg>
+            </div>
+            <div class="input-display" id="input-display"></div>
+            <div class="virtual-keyboard" id="virtual-keyboard">
+                <button data-key="1">1</button> <button data-key="2">2</button> <button data-key="3">3</button>
+                <button data-key="4">4</button> <button data-key="5">5</button> <button data-key="6">6</button>
+                <button data-key="7">7</button> <button data-key="8">8</button> <button data-key="9">9</button>
+                <button data-key="W">W</button> <button data-key="0">0</button> <button data-key="H">H</button>
+                <button data-key="DEL" style="grid-column: 1 / 3;">DELETE</button>
+                <button data-key="ENT">ENTER</button>
+            </div>
+        </div>
+    </div>
+    <script type="module" src="./04-core-code/main.js"></script>
+</body>
+</html>
