--- a/index.html
+++ b/index.html
@@ -42,10 +42,59 @@
             flex-shrink: 0;
             background-color: var(--keyboard-bg-color);
             border-top: 1px solid var(--panel-border-color);
-            padding: 15px;
             position: relative;
             transition: all 0.3s ease-in-out;
-            overflow: hidden; /* 隱藏鍵盤內容，但不影響絕對定位的按鈕 */
+            box-sizing: border-box;
+            padding-top: 35px; /* 為頂部按鈕留出空間 */
+            overflow: hidden; /* 隱藏滑出區域外的鍵盤 */
+        }
+        .panel-header {
+            position: absolute;
+            top: 5px;
+            left: 15px;
+            right: 15px;
+            display: flex;
+            justify-content: center;
+            height: 25px;
+        }
+        .panel-toggle, .keyboard-switcher {
+            border: 1px solid #ccc;
+            background-color: #fff;
+            border-radius: 10px;
+            cursor: pointer;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+        }
+        .panel-toggle {
+            width: 80px;
+            height: 20px;
+        }
+        /* [新增] 鍵盤切換器樣式 */
+        .keyboard-switcher {
+            position: absolute;
+            right: 0;
+            width: 40px;
+            height: 20px;
+        }
+        .panel-toggle svg, .keyboard-switcher svg {
+            width: 20px;
+            height: 20px;
+            transition: transform 0.3s ease-in-out;
+        }
+        /* [新增] 鍵盤滑動容器 */
+        .keyboard-flipper {
+            display: flex;
+            width: 200%; /* 兩個鍵盤的總寬度 */
+            transition: transform 0.3s ease-in-out;
+        }
+        .keyboard-flipper.show-functions {
+            transform: translateX(-50%); /* 向左滑動一個鍵盤的寬度 */
+        }
+        /* [新增] 通用鍵盤樣式 */
+        .keyboard {
+            width: 50%; /* 每個鍵盤佔據一半空間 */
+            padding: 15px;
             box-sizing: border-box;
         }
         .input-display {
@@ -70,46 +119,25 @@
             border-radius: 4px;
             border: 1px solid #ccc;
             background-color: #fff;
-        }
-        
-        .panel-toggle {
-            position: absolute;
-            top: 5px;
-            left: 50%;
-            transform: translateX(-50%);
-            width: 80px;
-            height: 20px;
-            border: 1px solid #ccc;
-            background-color: #fff;
-            border-radius: 10px;
-            cursor: pointer;
             display: flex;
             justify-content: center;
             align-items: center;
-            z-index: 10; /* 確保按鈕在最上層 */
         }
-        .panel-toggle svg {
-            width: 20px;
-            height: 20px;
-            transition: transform 0.3s ease-in-out;
-        }
-        
-        /* [修改] 鍵盤收合後的樣式 */
         .keyboard-panel.is-collapsed {
-            height: 30px !important; /* 收合到一個小高度，作為把手 */
+            height: 30px !important;
             padding: 0;
-            overflow: visible; /* 允許絕對定位的按鈕可見 */
+            border-top-width: 0;
+        }
+        .keyboard-panel.is-collapsed .keyboard-flipper {
+            visibility: hidden;
         }
         .keyboard-panel.is-collapsed .panel-toggle {
-           top: 5px; /* 重新定位按鈕到把手中央 */
+           top: 5px;
+           left: 50%;
+           transform: translateX(-50%);
         }
         .keyboard-panel.is-collapsed .panel-toggle svg {
             transform: rotate(180deg);
-        }
-        /* 當收合時，隱藏鍵盤和輸入框 */
-        .keyboard-panel.is-collapsed .input-display,
-        .keyboard-panel.is-collapsed .virtual-keyboard {
-            visibility: hidden;
         }
     </style>
 </head>
@@ -118,26 +146,42 @@
         <div class="results-panel">
             <h3>Quick Quote Results</h3>
             <table class="results-table">
-                <thead>
-                    <tr><th>W</th><th>H</th><th>TYPE</th><th>Price</th></tr>
-                </thead>
-                <tbody>
-                    <tr><td colspan="4" style="color: #888;">Please enter dimensions to begin...</td></tr>
-                </tbody>
+                <thead><tr><th>W</th><th>H</th><th>TYPE</th><th>Price</th></tr></thead>
+                <tbody><tr><td colspan="4" style="color: #888;">Please enter dimensions to begin...</td></tr></tbody>
             </table>
         </div>
         <div class="keyboard-panel" id="keyboard-panel">
-            <div class="panel-toggle" id="panel-toggle" title="Toggle Keyboard">
-                <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" d="m19.5 8.25-7.5 7.5-7.5-7.5" /></svg>
+            <div class="panel-header">
+                <div class="panel-toggle" id="panel-toggle" title="Toggle Keyboard">
+                    <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" d="m19.5 8.25-7.5 7.5-7.5-7.5" /></svg>
+                </div>
+                <div class="keyboard-switcher" id="keyboard-switcher" title="Switch to Function Keys">
+                    <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" d="M15.75 19.5 8.25 12l7.5-7.5" /></svg>
+                </div>
             </div>
-            <div class="input-display" id="input-display"></div>
-            <div class="virtual-keyboard" id="virtual-keyboard">
-                <button data-key="1">1</button> <button data-key="2">2</button> <button data-key="3">3</button>
-                <button data-key="4">4</button> <button data-key="5">5</button> <button data-key="6">6</button>
-                <button data-key="7">7</button> <button data-key="8">8</button> <button data-key="9">9</button>
-                <button data-key="W">W</button> <button data-key="0">0</button> <button data-key="H">H</button>
-                <button data-key="DEL" style="grid-column: 1 / 3;">DELETE</button>
-                <button data-key="ENT">ENTER</button>
+            <div class="keyboard-flipper" id="keyboard-flipper">
+                <div class="keyboard" id="numeric-keyboard">
+                    <div class="input-display" id="input-display"></div>
+                    <div class="virtual-keyboard">
+                        <button data-key="1">1</button> <button data-key="2">2</button> <button data-key="3">3</button>
+                        <button data-key="4">4</button> <button data-key="5">5</button> <button data-key="6">6</button>
+                        <button data-key="7">7</button> <button data-key="8">8</button> <button data-key="9">9</button>
+                        <button data-key="W">W</button> <button data-key="0">0</button> <button data-key="H">H</button>
+                        <button data-key="DEL" style="grid-column: 1 / 3;">
+                            <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" style="width: 1.5em; height: 1.5em;"><path stroke-linecap="round" stroke-linejoin="round" d="M12 9.75 14.25 12m0 0 2.25 2.25M14.25 12 12 14.25m-2.58 4.92L6.16 15.6a.75.75 0 0 1 0-1.06l4.19-4.19a.75.75 0 0 1 1.06 0l4.19 4.19a.75.75 0 0 1 0 1.06l-4.19 4.19a.75.75 0 0 1-1.06 0Z" /></svg>
+                        </button>
+                        <button data-key="ENT">ENT</button>
+                    </div>
+                </div>
+                <div class="keyboard" id="function-keyboard">
+                     <div class="virtual-keyboard" style="grid-template-columns: repeat(2, 1fr);">
+                        <button data-key="INSERT_BLIND">Insert Blind (Add)</button>
+                        <button data-key="APPEND_BLIND">Append Blind (Add)</button>
+                        <button data-key="DELETE_BLIND">Delete Blind (Del)</button>
+                        <button data-key="MAKE_QUOTE">Make Quote (Quo)</button>
+                        <button data-key="NEXT_STAGE" style="grid-column: 1 / 3;">Next Stage (Next)</button>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
