--- a/index.html
+++ b/index.html
@@ -26,8 +26,6 @@
             margin: 0 auto;
             background-color: var(--app-bg-color);
             box-shadow: 0 4px 20px rgba(0,0,0,0.1);
-            position: relative;
-            overflow: hidden;
         }
         .results-panel {
             flex-grow: 1;
@@ -44,16 +42,23 @@
             flex-shrink: 0;
             background-color: var(--keyboard-bg-color);
             border-top: 1px solid var(--panel-border-color);
-            padding: 15px;
+            padding-top: 30px; /* 為按鈕留出空間 */
+            padding-bottom: 15px;
+            padding-left: 15px;
+            padding-right: 15px;
             position: relative;
             transition: all 0.3s ease-in-out;
             box-sizing: border-box;
         }
+        .input-display, .virtual-keyboard {
+            /* [新增] 為可隱藏的內容增加過渡效果 */
+            transition: opacity 0.2s, visibility 0.2s;
+        }
+
         .input-display {
-            border: 1px solid #ccc;
-            background-color: #fff;
-            padding: 10px; font-size: 1.8em; text-align: right; margin-bottom: 15px;
-            min-height: 36px; border-radius: 4px;
+            border: 1px solid #ccc; background-color: #fff;
+            padding: 10px; font-size: 1.8em; text-align: right;
+            margin-bottom: 15px; min-height: 36px; border-radius: 4px;
         }
         .virtual-keyboard {
             display: grid;
@@ -61,46 +66,50 @@
             gap: 8px;
         }
         .virtual-keyboard button {
-            padding: 12px 5px;
-            font-size: 1.3em;
-            cursor: pointer;
-            border-radius: 4px;
-            border: 1px solid #ccc;
-            background-color: #fff;
+            padding: 12px 5px; font-size: 1.3em;
+            cursor: pointer; border-radius: 4px; border: 1px solid #ccc; background-color: #fff;
             display: flex; justify-content: center; align-items: center;
         }
+        
         .panel-toggle {
-            position: absolute; top: -1px; left: 50%;
-            transform: translateX(-50%) translateY(-100%);
-            width: 80px; height: 25px;
-            border: 1px solid var(--panel-border-color); border-bottom: none;
-            background-color: var(--keyboard-bg-color); border-radius: 8px 8px 0 0;
+            position: absolute;
+            top: 5px;
+            left: 50%;
+            transform: translateX(-50%);
+            width: 80px; height: 20px;
+            border: 1px solid #ccc; background-color: #fff; border-radius: 10px;
             cursor: pointer; display: flex; justify-content: center; align-items: center;
-            z-index: 30;
+            z-index: 10;
         }
         .panel-toggle svg {
             width: 20px; height: 20px;
             transition: transform 0.3s ease-in-out;
         }
+        
+        /* [修改] 鍵盤收合後的樣式 */
         .keyboard-panel.is-collapsed {
-            height: 0 !important;
-            padding: 0; border-top-width: 0; overflow: hidden;
+            height: 30px; /* 收合到一個固定的「把手」高度 */
+            padding: 0;
+            border-top-width: 1px;
         }
-        /* [修正] 移除 'display: none'，讓按鈕在收合時依然可見 */
         .keyboard-panel.is-collapsed .panel-toggle {
-            background-color: var(--app-bg-color);
+            top: 50%; /* 讓按鈕在把手上垂直置中 */
+            transform: translateX(-50%) translateY(-50%);
         }
         .keyboard-panel.is-collapsed .panel-toggle svg {
             transform: rotate(180deg);
         }
+        .keyboard-panel.is-collapsed .input-display,
+        .keyboard-panel.is-collapsed .virtual-keyboard {
+            visibility: hidden; /* 隱藏家具 */
+            opacity: 0; /* 讓隱藏有漸變效果 */
+        }
 
         .function-panel {
-            position: absolute;
-            bottom: 0; left: 0; right: 0;
+            position: absolute; bottom: 0; left: 0; right: 0;
             background-color: #e9eef5;
             border-top: 1px solid var(--panel-border-color);
-            padding: 15px;
-            z-index: 20;
+            padding: 15px; z-index: 20;
             transform: translateY(100%);
             transition: transform 0.3s ease-in-out;
         }
@@ -108,9 +117,7 @@
             transform: translateY(0%);
         }
         .function-keyboard {
-            display: grid;
-            grid-template-columns: repeat(3, 1fr);
-            gap: 8px;
+            display: grid; grid-template-columns: repeat(3, 1fr); gap: 8px;
         }
         .function-keyboard button {
             padding: 15px 5px; font-size: 1em;
