--- a/index.html
+++ b/index.html
@@ -26,6 +26,8 @@
             margin: 0 auto;
             background-color: var(--app-bg-color);
             box-shadow: 0 4px 20px rgba(0,0,0,0.1);
+            position: relative;
+            overflow: hidden;
         }
         .results-panel {
             flex-grow: 1;
@@ -38,89 +40,104 @@
         .results-table th, .results-table td { border: 1px solid #ddd; padding: 8px; text-align: center; }
         .results-table thead { background-color: #f2f2f2; }
 
+        /* 第二層：數字鍵盤 */
         .keyboard-panel {
             flex-shrink: 0;
             background-color: var(--keyboard-bg-color);
             border-top: 1px solid var(--panel-border-color);
-            padding-top: 30px; /* 為按鈕留出空間 */
-            padding-bottom: 15px;
-            padding-left: 15px;
-            padding-right: 15px;
+            padding: 15px;
             position: relative;
             transition: all 0.3s ease-in-out;
             box-sizing: border-box;
         }
-        .input-display, .virtual-keyboard {
-            /* [新增] 為可隱藏的內容增加過渡效果 */
-            transition: opacity 0.2s, visibility 0.2s;
-        }
-
         .input-display {
-            border: 1px solid #ccc; background-color: #fff;
+            border: 1px solid #ccc;
+            background-color: #fff;
             padding: 10px; font-size: 1.8em; text-align: right;
             margin-bottom: 15px; min-height: 36px; border-radius: 4px;
         }
         .virtual-keyboard {
             display: grid;
-            grid-template-columns: repeat(4, 1fr);
+            grid-template-columns: repeat(3, 1fr); /* [修改] 恢復為3欄 */
             gap: 8px;
         }
         .virtual-keyboard button {
-            padding: 12px 5px; font-size: 1.3em;
+            padding: 12px; font-size: 1.3em;
             cursor: pointer; border-radius: 4px; border: 1px solid #ccc; background-color: #fff;
             display: flex; justify-content: center; align-items: center;
         }
-        
         .panel-toggle {
-            position: absolute;
-            top: 5px;
-            left: 50%;
-            transform: translateX(-50%);
-            width: 80px; height: 20px;
-            border: 1px solid #ccc; background-color: #fff; border-radius: 10px;
+            position: absolute; top: -1px; left: 50%;
+            transform: translateX(-50%) translateY(-100%);
+            width: 80px; height: 25px;
+            border: 1px solid var(--panel-border-color); border-bottom: none;
+            background-color: var(--keyboard-bg-color); border-radius: 8px 8px 0 0;
             cursor: pointer; display: flex; justify-content: center; align-items: center;
-            z-index: 10;
         }
         .panel-toggle svg {
             width: 20px; height: 20px;
             transition: transform 0.3s ease-in-out;
         }
-        
-        /* [修改] 鍵盤收合後的樣式 */
         .keyboard-panel.is-collapsed {
-            height: 30px; /* 收合到一個固定的「把手」高度 */
-            padding: 0;
-            border-top-width: 1px;
+            height: 0 !important; padding: 0; border-top-width: 0; overflow: hidden;
         }
         .keyboard-panel.is-collapsed .panel-toggle {
-            top: 50%; /* 讓按鈕在把手上垂直置中 */
-            transform: translateX(-50%) translateY(-50%);
-        }
-        .keyboard-panel.is-collapsed .panel-toggle svg {
-            transform: rotate(180deg);
-        }
-        .keyboard-panel.is-collapsed .input-display,
-        .keyboard-panel.is-collapsed .virtual-keyboard {
-            visibility: hidden; /* 隱藏家具 */
-            opacity: 0; /* 讓隱藏有漸變效果 */
+            display: none;
         }
 
+        /* [修改/新增] 第三層：功能鍵盤面板 */
         .function-panel {
-            position: absolute; bottom: 0; left: 0; right: 0;
+            position: absolute;
+            top: 0;
+            right: 0;
+            bottom: 0;
+            width: 250px; /* 功能鍵盤的寬度 */
             background-color: #e9eef5;
-            border-top: 1px solid var(--panel-border-color);
-            padding: 15px; z-index: 20;
-            transform: translateY(100%);
+            border-left: 1px solid var(--panel-border-color);
+            z-index: 20;
+            transform: translateX(100%); /* 預設隱藏在螢幕右側 */
             transition: transform 0.3s ease-in-out;
+            display: flex; /* 使用 flex 佈局來放置按鈕和內容 */
+            align-items: center;
         }
         .function-panel.is-visible {
-            transform: translateY(0%);
+            transform: translateX(0%); /* 顯示時滑入畫面 */
+        }
+        /* 功能鍵盤的呼叫/隱藏按鈕 */
+        .function-panel-toggle {
+            position: absolute;
+            left: 0;
+            top: 50%;
+            transform: translateX(-100%) translateY(-50%); /* 讓按鈕的右邊緣貼齊面板的左邊緣 */
+            width: 25px;
+            height: 80px;
+            border: 1px solid var(--panel-border-color);
+            border-right: none;
+            background-color: #e9eef5;
+            border-radius: 8px 0 0 8px;
+            cursor: pointer;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+        }
+        .function-panel-toggle svg {
+            width: 20px;
+            height: 20px;
+            transition: transform 0.3s ease-in-out;
+        }
+        .function-panel.is-visible .function-panel-toggle svg {
+            transform: rotate(180deg); /* 面板展開時，箭頭旋轉 */
         }
         .function-keyboard {
-            display: grid; grid-template-columns: repeat(3, 1fr); gap: 8px;
+            width: 100%;
+            padding: 15px;
+            box-sizing: border-box;
+            display: grid;
+            grid-template-columns: 1fr; /* 功能鍵改為單欄 */
+            gap: 10px;
         }
         .function-keyboard button {
-            padding: 15px 5px; font-size: 1em;
+            padding: 15px 5px; font-size: 1.1em;
             cursor: pointer; border-radius: 4px;
             border: 1px solid #ccc; background-color: #fff;
         }
@@ -142,22 +159,22 @@
             </div>
             <div class="input-display" id="input-display"></div>
             <div class="virtual-keyboard" id="numeric-keyboard">
-                <button data-key="1">1</button> <button data-key="2">2</button> <button data-key="3">3</button> <button data-key="W">W</button>
-                <button data-key="4">4</button> <button data-key="5">5</button> <button data-key="6">6</button> <button data-key="H">H</button>
+                <button data-key="1">1</button> <button data-key="2">2</button> <button data-key="3">3</button>
+                <button data-key="4">4</button> <button data-key="5">5</button> <button data-key="6">6</button>
                 <button data-key="7">7</button> <button data-key="8">8</button> <button data-key="9">9</button>
-                <button data-key="TOGGLE_FUNCTIONS" title="Function Keys">
-                    <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" style="width:1.5em; height:1.5em;"><path stroke-linecap="round" stroke-linejoin="round" d="M6.75 12a.75.75 0 1 1-1.5 0 .75.75 0 0 1 1.5 0ZM12.75 12a.75.75 0 1 1-1.5 0 .75.75 0 0 1 1.5 0ZM18.75 12a.75.75 0 1 1-1.5 0 .75.75 0 0 1 1.5 0Z" /></svg>
-                </button>
+                <button data-key="W">W</button> <button data-key="0">0</button> <button data-key="H">H</button>
                 <button data-key="DEL" style="grid-column: 1 / 3;">
                     <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" style="width: 1.5em; height: 1.5em;"><path stroke-linecap="round" stroke-linejoin="round" d="M12 9.75 14.25 12m0 0 2.25 2.25M14.25 12 12 14.25m-2.58 4.92L6.16 15.6a.75.75 0 0 1 0-1.06l4.19-4.19a.75.75 0 0 1 1.06 0l4.19 4.19a.75.75 0 0 1 0 1.06l-4.19 4.19a.75.75 0 0 1-1.06 0Z" /></svg>
                 </button>
-                <button data-key="0">0</button>
                 <button data-key="ENT">ENT</button>
             </div>
         </div>
 
         <div class="function-panel" id="function-panel">
-             <div class="function-keyboard">
+            <div class="function-panel-toggle" id="function-panel-toggle" title="Toggle Function Panel">
+                <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" d="M15.75 19.5 8.25 12l7.5-7.5" /></svg>
+            </div>
+            <div class="function-keyboard">
                 <button data-key="INSERT_BLIND">Insert Blind</button>
                 <button data-key="APPEND_BLIND">Append Blind</button>
                 <button data-key="DELETE_BLIND">Delete Blind</button>
