--- a/Cal.html
+++ b/Cal.html
@@ -27,7 +27,7 @@
             gap: 8px;
         }
         .virtual-keyboard button {
-            padding: 20px 5px; /* 增加按鈕高度 */
+            padding: 20px 5px;
             font-size: 1.5em;
             font-weight: 500;
             cursor: pointer;
@@ -38,12 +38,15 @@
             justify-content: center;
             align-items: center;
         }
-        /* 讓 0 號鍵橫跨兩欄 */
         .key-zero {
             grid-column: span 2;
         }
-        /* 功能鍵的特殊樣式 */
         .key-function {
+            background-color: #e5e7eb;
+        }
+        /* [新增] 讓 Enter 鍵橫跨兩行 */
+        .key-enter {
+            grid-row: span 2;
             background-color: #e5e7eb;
         }
     </style>
@@ -65,15 +68,17 @@
             <button data-key="1">1</button>
             <button data-key="2">2</button>
             <button data-key="3">3</button>
-            <button data-key="ENT" class="key-function">ENT</button>
+            <button data-key="ENT" class="key-enter">
+                <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" style="width: 1.5em; height: 1.5em;">
+                  <path stroke-linecap="round" stroke-linejoin="round" d="M9 15 3 9m0 0 6-6M3 9h12a6 6 0 0 1 0 12h-3" />
+                </svg>
+            </button>
             
             <button data-key="0" class="key-zero">0</button>
             <button data-key="DEL">
                 <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" style="width: 1.2em; height: 1.2em;"><path stroke-linecap="round" stroke-linejoin="round" d="M12 9.75 14.25 12m0 0 2.25 2.25M14.25 12 12 14.25m-2.58 4.92L6.16 15.6a.75.75 0 0 1 0-1.06l4.19-4.19a.75.75 0 0 1 1.06 0l4.19 4.19a.75.75 0 0 1 0 1.06l-4.19 4.19a.75.75 0 0 1-1.06 0Z" /></svg>
             </button>
-            <button data-key="TOGGLE_FUNCTIONS" title="Function Keys" class="key-function">
-                <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" style="width:1.2em; height:1.2em;"><path stroke-linecap="round" stroke-linejoin="round" d="M6.75 12a.75.75 0 1 1-1.5 0 .75.75 0 0 1 1.5 0ZM12.75 12a.75.75 0 1 1-1.5 0 .75.75 0 0 1 1.5 0ZM18.75 12a.75.75 0 1 1-1.5 0 .75.75 0 0 1 1.5 0Z" /></svg>
-            </button>
+            
         </div>
     </div>
 
