--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
             --keyboard-bg-color: #f3f4f6;
             --app-bg-color: #ffffff;
             --highlight-color: #a0d3e8;
-            --primary-color: #1a237e; /* 深藍色 */
+            --primary-color: #1a237e;
+            --medium-blue-color: #1976D2; /* [新增] 中間藍色 */
         }
         html, body {
             height: 100%; margin: 0;
@@ -34,13 +35,13 @@
         .results-table th[data-column="TYPE"] { cursor: pointer; }
         .results-table td.highlighted-cell { background-color: var(--highlight-color); }
 
-        /* [新增] TYPE 欄位的字體樣式 */
         .type-bo1 {
             font-weight: bold;
             font-style: italic;
         }
+        /* [修改] SN 字體的顏色 */
         .type-sn {
-            color: var(--primary-color);
+            color: var(--medium-blue-color);
             font-weight: bold;
         }
 
