--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Quotation App v0.1</title>
+    <title>Quotation App v0.2</title>
     <style>
         :root {
             --panel-border-color: #d1d5db;
@@ -11,7 +11,7 @@
             --app-bg-color: #ffffff;
             --highlight-color: #a0d3e8;
             --primary-color: #1a237e;
-            --medium-blue-color: #1976D2; /* [新增] 中間藍色 */
+            --medium-blue-color: #1976D2;
         }
         html, body {
             height: 100%; margin: 0;
@@ -28,82 +28,115 @@
         .results-panel {
             flex-grow: 1; overflow-y: auto; padding: 20px; box-sizing: border-box;
         }
-        .results-panel h3 { margin-top: 0; }
+        /* --- [新增] 標題與總價的容器 --- */
+        .results-header {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            margin-bottom: 10px; /* 與下方表格的間距 */
+        }
+        .results-header h3 {
+            margin: 0;
+            color: var(--primary-color);
+        }
+        /* --- [新增] 總價顯示區的樣式 --- */
+        .total-sum-container {
+            display: flex;
+            align-items: center;
+            border: 1px solid var(--panel-border-color);
+            padding: 5px 10px;
+            border-radius: 4px;
+            background-color: #f9fafb;
+        }
+        .total-sum-container .label {
+            font-weight: bold;
+            margin-right: 8px;
+            color: #374151;
+        }
+        .total-sum-container .value {
+            font-size: 1.2em;
+            font-weight: bold;
+            color: var(--medium-blue-color);
+            min-width: 80px; /* 給予一個最小寬度，避免內容變動時跳動 */
+            text-align: right;
+        }
         .results-table { width: 100%; border-collapse: collapse; }
         .results-table th, .results-table td { border: 1px solid #ddd; padding: 8px; text-align: center; transition: background-color 0.3s; }
         .results-table thead { background-color: #f2f2f2; }
         .results-table th[data-column="TYPE"] { cursor: pointer; }
         .results-table td.highlighted-cell { background-color: var(--highlight-color); }
-
-        .type-bo1 {
-            font-weight: bold;
-            font-style: italic;
-        }
-        /* [修改] SN 字體的顏色 */
-        .type-sn {
-            color: var(--medium-blue-color);
-            font-weight: bold;
-        }
+        .type-bo1 { font-weight: bold; font-style: italic; }
+        .type-sn { color: var(--medium-blue-color); font-weight: bold; }
 
         .keyboard-panel {
             flex-shrink: 0; background-color: var(--keyboard-bg-color);
             border-top: 1px solid var(--panel-border-color);
-            padding: 15px; padding-top: 35px;
+            padding: 15px; padding-top: 15px; /* [修改] 移除頂部 panel-toggle 的空間 */
             position: relative; transition: all 0.3s ease-in-out;
             box-sizing: border-box;
         }
-        .input-display, .virtual-keyboard {
-            transition: opacity 0.2s, visibility 0.2s;
+
+        /* --- [新增] 新的 Flexbox 容器 --- */
+        .input-area-container {
+            display: flex;
+            gap: 8px; /* 按鈕與顯示框之間的間距 */
+            margin-bottom: 15px; /* 與下方數字鍵盤的間距 */
+            align-items: stretch; /* 讓內部項目等高 */
         }
         .input-display {
             border: 1px solid #ccc; background-color: #fff;
             padding: 10px; font-size: 1.8em; text-align: right;
-            margin-bottom: 15px; min-height: 36px; border-radius: 4px;
+            border-radius: 4px; display: flex; align-items: center; justify-content: flex-end;
+            /* --- [修改] 使用 flex 調整空間佔比 --- */
+            flex: 1.2;
         }
+        /* --- [新增] 新功能鍵的容器 --- */
+        .function-keys {
+            flex: 3;
+            display: grid;
+            grid-template-columns: repeat(3, 1fr);
+            gap: 8px;
+        }
+
         .virtual-keyboard {
             display: grid; grid-template-columns: repeat(4, 1fr); gap: 8px;
         }
-        .virtual-keyboard button {
+        /* --- [修改] 讓所有按鈕共用樣式 --- */
+        .virtual-keyboard button,
+        .function-keys button {
             padding: 12px 5px; font-size: 1.3em;
             cursor: pointer; border-radius: 4px; border: 1px solid #ccc; background-color: #fff;
             display: flex; justify-content: center; align-items: center; font-weight: 500;
         }
-        .panel-toggle {
-            position: absolute; top: 5px; left: 50%;
-            transform: translateX(-50%);
-            width: 80px; height: 20px;
-            border: 1px solid #ccc; background-color: #fff; border-radius: 10px;
-            cursor: pointer; display: flex; justify-content: center; align-items: center; z-index: 10;
+
+        .panel-toggle { /* [註] 這個 toggle 功能暫時隱藏，若需要可恢復 */
+            display: none;
         }
-        .panel-toggle .toggle-arrow {
-            width: 20px; height: 20px; transition: opacity 0.3s ease-in-out; position: absolute;
-        }
-        .keyboard-panel .arrow-down { opacity: 1; }
-        .keyboard-panel .arrow-up { opacity: 0; }
-        .keyboard-panel.is-collapsed .arrow-down { opacity: 0; }
-        .keyboard-panel.is-collapsed .arrow-up { opacity: 1; }
-        .keyboard-panel.is-collapsed {
-            height: 30px; padding: 0; border-top-width: 1px;
-        }
-        .keyboard-panel.is-collapsed .panel-toggle {
-            top: 50%; transform: translateX(-50%) translateY(-50%);
-        }
-        .keyboard-panel.is-collapsed .input-display,
-        .keyboard-panel.is-collapsed .virtual-keyboard {
-            visibility: hidden; opacity: 0;
-        }
+        
         .key-zero { grid-column: span 2; }
         .key-function { background-color: #e5e7eb; }
         .key-enter {
             grid-row: span 2; background-color: #e5e7eb;
             font-weight: bold; font-size: 2.2em; padding-bottom: 25px;
         }
+        /* --- [新增] Sum 按鈕的特殊樣式 --- */
+        .key-sum {
+            background-color: #dbeafe; /* 淡藍色背景 */
+            font-weight: bold;
+            color: #1e40af; /* 深藍色文字 */
+        }
     </style>
 </head>
 <body>
     <div id="app" class="app-container">
         <div class="results-panel">
-            <h3>Quick Quote Results</h3>
+            <div class="results-header">
+                <h3>Ez Blinds Quote</h3>
+                <div class="total-sum-container">
+                    <span class="label">Sum</span>
+                    <span class="value" id="total-sum-value"></span>
+                </div>
+            </div>
             <table class="results-table" id="results-table">
                 <thead>
                     <tr>
@@ -115,11 +148,15 @@
             </table>
         </div>
         <div class="keyboard-panel" id="numeric-keyboard-panel">
-            <div class="panel-toggle" id="panel-toggle" title="Toggle Keyboard">
-                <svg class="toggle-arrow arrow-down" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" d="m19.5 8.25-7.5 7.5-7.5-7.5" /></svg>
-                <svg class="toggle-arrow arrow-up" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" d="M4.5 15.75l7.5-7.5 7.5 7.5" /></svg>
+            <div class="input-area-container">
+                <div class="input-display" id="input-display"></div>
+                <div class="function-keys">
+                    <button id="key-f1">F1</button>
+                    <button id="key-f2">F2</button>
+                    <button id="key-sum" class="key-sum">Sum</button>
+                </div>
             </div>
-            <div class="input-display" id="input-display"></div>
+
             <div class="virtual-keyboard" id="numeric-keyboard">
                 <button data-key="7">7</button><button data-key="8">8</button><button data-key="9">9</button><button data-key="W" class="key-function">W</button>
                 <button data-key="4">4</button><button data-key="5">5</button><button data-key="6">6</button><button data-key="H" class="key-function">H</button>
